--- a/02-CSS/homework/responsive-web/less/home-page.less
+++ b/02-CSS/homework/responsive-web/less/home-page.less
@@ -2,6 +2,10 @@
 
 .home {
   .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 5px;
     h2 {
       padding: 15px;
     }
@@ -9,6 +13,7 @@
     p {
       padding: 0 15px;
     }
+    .headerImgMixin;
   }
 
   .music-images {
@@ -21,6 +26,15 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+    }
+
+    @media (max-width: @phone) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 95%;
+      }
     }
   }
 
@@ -55,6 +69,19 @@
       }
 
       .btn {
+        .registrateBtn(rgb(36, 36, 36),rgb(196, 196, 196));
+        width: fit-content;
+        padding: 15px;
+        @media (max-width: @phone) {
+          width: 100%;
+          padding: 20px;
+          font-size: 2rem;
+          text-align: center;
+        }
+        &:hover {
+          background: blue;
+          color: white;
+        }
       }
     }
 
@@ -66,6 +93,23 @@
         width: 100%;
         height: auto;
         border-radius: 10px;
+      }
+    }
+
+    @media (max-width: @phone) {
+      flex-direction: column-reverse;
+      width: 100%;
+      padding: 10px 5px;
+      .actual-img {
+        width: 100%;
+        margin-left: 0;
+      }
+      .actual-text {
+        padding-top: 20px;
+        width: 100%;
+      }
+      .btn {
+        width: 100%;
       }
     }
   }
