--- a/02-CSS/homework/responsive-web/less/mixins.less
+++ b/02-CSS/homework/responsive-web/less/mixins.less
@@ -1,1 +1,29 @@
 // Mixins acá
+
+.navMixin {
+  background-color: rgb(240, 240, 240);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
+  h1 {
+    font-size: 3rem;
+  }
+}
+
+.headerImgMixin {
+  img {
+    width: 100%;
+    margin: 5px;
+    border-radius: 20px;
+    height: 100%;
+  }
+}
+
+.registrateBtn (@bgColor, @textColor) {
+  border-radius: 5px;
+  background-color: @bgColor;
+  font-size: 1.5rem;
+  color: @textColor;
+}
