--- a/08-React-Estado-LifeCycle/homework/01 - Exercises/src/components/Animals/Animals.module.css
+++ b/08-React-Estado-LifeCycle/homework/01 - Exercises/src/components/Animals/Animals.module.css
@@ -1,16 +1,18 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2em;
 }
 
 .containerAnimals {
   display: flex;
   margin: 1em;
   border: #f6f4e6 solid;
-  box-shadow: 5px 5px  rgba(170, 169, 169, 0.15);
-  color: #f6f4e6;
+  border-radius: 25px;
+  box-shadow: 5px 5px rgba(170, 169, 169, 0.15);
+  /* color: #f6f4e6; */
+  color: black;
   align-items: center;
   flex-direction: column;
   justify-content: center;
